# todolist

./: pyproject.toml
core/: admin.py  forms.py  models.py  permission.py  serializer.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  filters.py  models.py  serializer.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_alter_goalcategory_created_and_more.py
todolist/: settings.py  urls.py
